p2/deployment/app-one.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-one
  labels:
    app: app-one
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-one
  template:
    metadata:
      labels:
        app: app-one
    spec:
      containers:
        - name: app-one
          image: paulbouwer/hello-kubernetes:1.10
          ports:
            - containerPort: 8080

apiVersion: v1
kind: Service
metadata:
  name: app-one
spec:
  selector:
    app: app-one
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80

# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: app-two
#   labels:
#     app: app-two
# spec:
#   replicas: 3
#   selector:
#     matchLabels:
#       app: app-two
#   template:
#     metadata:
#       labels:
#         app: app-two
#     spec:
#       containers:
#         - name: app-two
#           image: paulbouwer/hello-kubernetes:1.10
#           env:
#             - name: MESSAGE
#               value: "Hello from app2."
#           ports:
#             - containerPort: 80

# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: app-three
#   labels:
#     app: app-three
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: app-three
#   template:
#     metadata:
#       labels:
#         app: app-three
#     spec:
#       containers:
#         - name: app-three
#           image: paulbouwer/hello-kubernetes:1.10
#           env:
#             - name: MESSAGE
#               value: "Hello from app3."
#           ports:
#             - containerPort: 80

# apiVersion: apps/v1
# kind: Service
# metadata:
#   name: app-two
# spec:
#   selector:
#     app: app-two
#   ports:
#     - name: http
#       protocol: TCP
#       port: 80
#       targetPort: 80
#   clusterIP: 10.43.193.160

# apiVersion: apps/v1
# kind: Service
# metadata:
#   name: app-three
# spec:
#   selector:
#     app: app-three
#   ports:
#     - name: http
#       protocol: TCP
#       port: 80
#       targetPort: 80
#   clusterIP: 10.43.229.156
